syntax = "proto3";

package order;

option go_package = "github.com/test-workflow/proto/order";
option java_package = "com.testworkflow.proto";
option csharp_namespace = "TestWorkflow.Proto";

import "common.proto";

// Order Service - handles order creation and management

service OrderService {
  // Create a new order
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);

  // Get order by ID
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);

  // List all orders
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);

  // Update order status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

message Order {
  string id = 1;
  string customer_name = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  string status = 5; // PENDING, CONFIRMED, SHIPPED, DELIVERED, CANCELLED
  string created_at = 6;
  string updated_at = 7;
}

message CreateOrderRequest {
  string customer_name = 1;
  repeated OrderItem items = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message ListOrdersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}
